# rust_dice

./: .gitignore  Cargo.toml
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs  validation.rs
crates/ast/src/validation/: errors.rs
crates/dice/: Cargo.toml
crates/dice-cli/: Cargo.toml
crates/dice-cli/src/: main.rs
crates/dice/src/: lexer.rs  lib.rs  main.rs  parser.rs  syntax.rs
crates/dice/src/parser/: event.rs  expr.rs  marker.rs  sink.rs  source.rs
crates/expr/: Cargo.toml
crates/expr/src/: database.rs  lib.rs  total.rs
crates/hir/: Cargo.toml
crates/hir/src/: database.rs  expr.rs  lib.rs
crates/hir/src/expr/: set_ops.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs  token_kind.rs
crates/parser/: Cargo.toml
crates/parser/src/: event.rs  grammar.rs  lib.rs  parser.rs  sink.rs  source.rs
crates/parser/src/grammar/: expr.rs
crates/parser/src/parser/: marker.rs  parse_error.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: lib.rs
src/: ast.rs  dice.pest  eval.rs  expr.rs  lib.rs  main.rs
src/parse/: mod.rs  parser.rs
src/roll/: eval.rs  expr.rs  mod.rs
