[package]
name = "rust_dice"
version = "0.1.0"
authors = ["Steelbirdy <patrickammons@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
pest = "2.1.3"
pest_consume = "1.0.6"
pest_consume_macros = "1.0.6"
rand = "0.8.3"