[package]
name = "ast"
version = "0.1.0"
authors = ["Steelbirdy <patrickammons@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntax = { path = "../syntax" }
text-size = "1.1.0"

[dev-dependencies]
parser = { path = "../parser" }