[package]
name = "dice"
version = "0.1.0"
authors = ["Steelbirdy <patrickammons@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
rowan = "0.12.6"

[dev-dependencies]
expect-test = "1.1.0"