[package]
name = "expr"
version = "0.1.0"
authors = ["Steelbirdy <patrickammons@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hir = { path = "../hir" }
la-arena = "0.2.0"

[dev-dependencies]
ast = { path = "../ast" }
parser = { path = "../parser" }