[package]
name = "hir"
version = "0.1.0"
authors = ["Steelbirdy <patrickammons@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
syntax = { path = "../syntax" }
la-arena = "0.2.0"
rand = "0.8.3"

[dev-dependencies]
parser = { path = "../parser" }